# policy-orchestrator

./: .env.example  BUILD_PATTERN-G.md  CLAUDE.md  INTENT.md  README.md  SESSION_RESUME.md  main.py  pyproject.toml
.control/: repo.yaml
adr/: 0001-control-plane-architecture.md  0002-filesystem-inventory.md
dashboards/: control-plane.html
docs/: CHAT_INGEST_ARCHITECTURE.md  DEPLOYMENT.md  DOCVEC_INTEGRATION.md  KEY_ACQUISITION.md  proposal_dual_layer_interface.md
lib/: llm_router.py
local/: README.md
policies/hard/: embedding-model.md  git-main.md  gitignore-data.yaml  legal-data.md  pages-encryption.yaml
policies/soft/: docs.md  llm-prompts.md  style.md
registries/: agents.yaml  inventory.yaml  pages.yaml  providers.yaml  reference-repos.yaml  repos.yaml  tools.yaml  vector-collections.yaml
scripts/: audit_pages_security.py  audit_vectors.py  db_status.py  deploy_pages.py  embed.py  generate_dashboard.py  generate_readme.py  ingest_sessions.py  log_fact.py  log_feedback.py  policy_lint.py  repo_audit.py  repo_discover.py  repo_status.py  repo_sync.py  search_sessions.py  search_unified.py  secrets_check.py  validate_secrets.py  verify_pages_live.py
scripts/lib/: __init__.py  embedder.py  qdrant_helpers.py
src/policy_orchestrator/: __init__.py  cli.py
templates/: .gitignore  AGENTS.md  CLAUDE.md  gitignore-data-heavy  repo.yaml
templates/github/: ci-python.yml  secret-scan.yml
